Fixed SonarQube Maintainability issues