@@ -3,7 +3,6 @@ package com.riccardo.shop.repository.mongo;
 import static org.assertj.core.api.Assertions.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -112,6 +111,6 @@ public class ProductMongoRepositoryIT {
 						"" + d.get(ProductMongoRepository.PRODUCT_ID_KEY),
 						"" + d.get(ProductMongoRepository.PRODUCT_NAME_KEY),
 						d.getDouble(ProductMongoRepository.PRODUCT_PRICE_KEY)))
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
