@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.*;
 
 import java.net.InetSocketAddress;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -147,6 +146,6 @@ public class ProductMongoRepositoryTest {
 						"" + d.get(ProductMongoRepository.PRODUCT_ID_KEY),
 						"" + d.get(ProductMongoRepository.PRODUCT_NAME_KEY),
 						d.getDouble(ProductMongoRepository.PRODUCT_PRICE_KEY)))
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
